# voronoi

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/geometrix/: axldebug.hpp  color.hpp  edge.hpp  face.hpp  foreach.hpp  mdebug.hpp  mesh.hpp  mesher.hpp  node.hpp  point.hpp  polygonizer3d.hpp  polygonizer3d_mc.hpp  regularity.hpp  subdivider.hpp  subdivision.hpp  tmsh.hpp  tmsh_cell.hpp  tmsh_controler2.hpp  tmsh_controler3.hpp  tmsh_vertex.hpp  tuple.hpp
include/voronoi/: CMakeLists.txt  CMakeLists.txt~  distfield.hpp  mdebug.h  point.hpp  voronoi_cell.hpp  voronoi_controler.hpp  voronoi_hline.hpp
src/: CMakeLists.txt
src/voronoi/: CMakeLists.txt  hline.cpp  hline.h  marching_cube.cpp  mediatrice.cpp  mediatrice.h
test/: CMakeLists.txt  hline_test.cpp  subdivision_test.cpp
